# posixtest

./: CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: cmake-freebsd.yml  cmake-linux.yml  cmake-mac.yml
